# trading-core

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  AUDIT_FIXES.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_SUMMARY.md  PAIR_FILTER_UPDATE.md  QUICK_REFERENCE_PAIRS.md  README.md  RPC_OPTIMIZATION_COMPLETE.md  STRATEGY_EXECUTION_CHANGES.md  WORKLOG.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: WORKLOG.md  phase2-detection-summary.md
config/: default.json  pairs.json
docker/: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml
docs/: CEX_DATA_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  INFRASTRUCTURE_FILES.md  PHASE1_IMPLEMENTATION.md  POSTMORTEM.md  QUICK_REFERENCE.md  RPC_AUDIT.md  RPC_OPTIMIZATION_SUMMARY.md  RPC_SETUP_GUIDE.md  TIMESTAMP_POLICY.md  TIMESTAMP_QUICK_REFERENCE.md  WORKLOG.md  agents.md  dashboard-testing.md  event-driven-optimization.md  mainnet-uniswap-v3-setup.md  mev-protection.md  prompt.md  runbook.md  spec-additions.md  spec.md
examples/: event-driven-demo.ts
grafana/: DASHBOARD_FIX.md  DASHBOARD_UPDATES.md  PNL_DASHBOARD_GUIDE.md  README.md  TESTING.md
hl-pca-hotpath/: Cargo.toml  hl-pca.toml
hl-pca-hotpath/src/: config.rs  db.rs  lib.rs  main.rs  pca_engine.rs  regime.rs  signal.rs  types.rs  ws_feed.rs
infra/: README.md  cloudwatch.tf  ec2.tf  ecr.tf  main.tf  network.tf  outputs.tf  secrets.tf  security-group.tf  terraform.tfvars.example  user-data.sh  variables.tf
models/: pm_apy_calibration.json  pm_apy_features.json  pm_kelly_calibration.json  pm_scorer.json  pm_scorer.onnx  pm_scorer_apy.onnx  pm_scorer_capital.onnx  pm_scorer_features.json  pm_scorer_kelly.onnx  (+18 more)
pm-copy-hotpath/: Cargo.toml  DATA_ENGINEERING.md  LATENCY_ANALYSIS.md  WS_SCHEMA.md  config.example.toml  pm-hotpath.toml  traders.example.json
pm-copy-hotpath/benches/: hotpath.rs
pm-copy-hotpath/src/: clob_client.rs  config.rs  db.rs  fill_checker.rs  lib.rs  main.rs  order_builder.rs  positions.rs  resolver.rs  risk.rs  rtds_listener.rs  scorer.rs  trade_sync.rs  trader_db.rs  types.rs
(+302 files in other folders)
