[package]
name = "pm-copy-hotpath"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Low-latency Polymarket copy-trade hot path (RTDS + CLOB orders)"

[dependencies]
polymarket-client-sdk = { version = "0.4.4", features = ["clob", "rtds", "ws", "tracing"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
thiserror = "2.0"
ahash = "0.8"
futures = "0.3"
alloy = { version = "1.6", default-features = false, features = [
    "signer-local",
    "signers",
] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
chrono = "0.4"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "load-dynamic", "api-24"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hotpath"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
